<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_gradient_bg4"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.83"
        android:orientation="vertical">

        <!--App icon & Logout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="135dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/app_icon" />

                <LinearLayout
                    android:id="@+id/lyLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_gradient_bg6"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:theme="@style/AppTheme.MyRipple">

                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="12dp"
                        android:background="@drawable/ic_logout"
                        android:backgroundTint="#FFFFFF" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <!--Play Quiz-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="55dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_gradient_bg6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_play_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/Play_Quiz"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:theme="@style/AppTheme.MyRipple" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--Split line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:rotation="180" />

    <!--Bottom View-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <!--Leaderboard-->
            <LinearLayout
                android:id="@+id/lyLeaderboard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="25dp"
                    card_view:cardBackgroundColor="#00FFFFFF"
                    card_view:cardPreventCornerOverlap="true">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/star" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/leaderboard"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_13" />

            </LinearLayout>

            <!--Instruction-->
            <LinearLayout
                android:id="@+id/lyInstruction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="25dp"
                    card_view:cardBackgroundColor="#00FFFFFF"
                    card_view:cardPreventCornerOverlap="true">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/book" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/Instruction"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_13" />

            </LinearLayout>

            <!--User Profile-->

            <!--Settings-->
            <LinearLayout
                android:id="@+id/lyUserProfile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="25dp"
                    card_view:cardBackgroundColor="#00FFFFFF"
                    card_view:cardPreventCornerOverlap="true">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/user" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/User_Profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_13" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lySettings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="25dp"
                    card_view:cardBackgroundColor="#00FFFFFF"
                    card_view:cardPreventCornerOverlap="true">

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/settings" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/public_medium"
                    android:gravity="center"
                    android:text="@string/Settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_text_13" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>